--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1487,8 +1487,12 @@
   margin: 0 auto;
 }
 
-.half-wrapper {
-  width: 50%;
+.left-container {
+  padding: 8.8rem 1rem 8.8rem 4rem;
+}
+
+.right-container {
+  padding: 8.8rem 4rem 8.8rem 1rem;
 }
 
 @media only screen and (max-width: 768px) {
