--- a/src/scss/Pages/_common.scss
+++ b/src/scss/Pages/_common.scss
@@ -6,10 +6,12 @@ main {
 
 .underline-wrapper {
     display: flex;
+
     .underline-text {
         position: relative;
         color: $green_color;
         z-index: 2;
+
         &::after {
             position: absolute;
             content: '';
@@ -108,7 +110,7 @@ main {
     font-size: 3.2rem;
     font-weight: 700;
     line-height: 100%;
-    color: #333;   
+    color: #333;
 }
 
 .font-36-700 {
@@ -116,7 +118,7 @@ main {
     font-size: 3.6rem;
     font-weight: 700;
     line-height: 100%;
-    color: #333;   
+    color: #333;
 }
 
 .font-48-700 {
@@ -133,4 +135,120 @@ main {
     font-weight: 700;
     line-height: 100%;
     color: #333;
+}
+
+//card boder animation
+$line-size: 3px;
+$delay1: .3s;
+$delay2: .6s;
+$distance: -1px;
+
+.card-item {
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+    border: 2px solid #f9f9f987;
+    transition: all 1s;
+    margin-bottom: 2.4rem;
+
+    .card-wrapper {
+        position: relative;
+        color: white;
+        font-family: 'Roboto', sans-serif;
+
+        .card {
+            padding: 1.6rem 1.2rem;
+            .title {
+                color: #FFF;
+                padding-bottom: 0.8rem;
+                border-bottom: 1px solid #eee;
+                margin-bottom: 0.8rem;
+            }
+            p {
+                color: #FFF;
+                line-height: 2.2rem;
+            }
+        }
+    }
+
+    .line {
+        background: white;
+        position: absolute;
+        transition: none;
+        transform: scale(0);
+        opacity: 1;
+    }
+
+
+    .line:nth-child(1) {
+        transform-origin: 100% 100%;
+        height: $line-size;
+        width: 20%;
+        bottom: 0;
+    }
+
+
+    .line:nth-child(4) {
+        transform-origin: 0 100%;
+        height: $line-size;
+        width: 20%;
+        top: $distance;
+        right: 0;
+    }
+
+
+    .line:nth-child(2) {
+        transform-origin: 100% 100%;
+        height: 100%;
+        width: $line-size;
+        bottom: 0;
+        left: $distance;
+    }
+
+
+    .line:nth-child(5) {
+        transform-origin: 100% 0;
+        height: 100%;
+        width: $line-size;
+        bottom: 0;
+        right: $distance;
+    }
+
+
+    .line:nth-child(3) {
+        transform-origin: 0 100%;
+        height: $line-size;
+        width: 100%;
+        top: $distance;
+        left: $distance;
+    }
+
+
+    .line:nth-child(6) {
+        transform-origin: 100% 0;
+        height: $line-size;
+        width: 100%;
+        bottom: 0;
+        right: $distance;
+    }
+
+    &:hover>.line {
+        transform: scale(1);
+        opacity: 0;
+        transition: all 1s;
+    }
+
+    &:hover>.line:nth-child(2),
+    &:hover>.line:nth-child(5) {
+        transition-delay: $delay1;
+    }
+
+    &:hover>.line:nth-child(3),
+    &:hover>.line:nth-child(6) {
+        transition-delay: $delay2;
+    }
+
+    &:hover {
+        background: rgba(255, 255, 255, 0.03);
+    }
 }
