--- a/src/scss/Pages/_common.scss
+++ b/src/scss/Pages/_common.scss
@@ -252,3 +252,16 @@ $distance: -1px;
         background: rgba(255, 255, 255, 0.03);
     }
 }
+
+.href-long-term-plan {
+    color: $red_color;
+    &:hover {
+        opacity: 0.7;
+    }
+}
+.href-life-planning {
+    color: $red_color;
+    &:hover {
+        opacity: 0.7;
+    }
+}
