--- a/src/scss/Pages/_index.scss
+++ b/src/scss/Pages/_index.scss
@@ -665,6 +665,7 @@
             .card-item {
                 width: 100%;
             }
+
             .card {
                 position: relative;
                 display: flex;
@@ -687,23 +688,195 @@
                     .image008 {
                         width: 8.0rem;
                     }
+
                     .image009 {
                         width: 8.2rem;
                     }
+
                     .image010 {
                         width: 8.1rem;
                     }
+
                     .image011 {
                         width: 8.4rem;
                     }
+
                     .image012 {
                         width: 8.0rem;
                     }
+
                     .image013 {
                         width: 8.6rem;
                     }
+
                     .image014 {
                         width: 8.2rem;
+                    }
+                }
+            }
+        }
+    }
+
+    .feature {
+        background-color: #f5fff9;
+        background-image: url(../img/bg_blue.png);
+        background-repeat: repeat;
+        background-position: 50% 20px;
+        background-size: 40px 40px;
+        padding: 10rem 0;
+
+        .container {
+            position: relative;
+        }
+
+        .head-text {
+            position: relative;
+            color: #D81718;
+            text-shadow: 3px 3px 2px #F5E07D;
+            margin-bottom: 4.8rem;
+        }
+
+        .en-head-text {
+            position: absolute;
+            font-size: 14rem;
+            color: #c3c3c394 !important;
+            text-shadow: unset;
+            top: 1rem;
+            right: 0;
+        }
+
+        .head-desc {
+            line-height: 3.2rem;
+            margin-bottom: 4.8rem;
+        }
+
+        .plan-life {
+            display: grid;
+            grid-template-columns: repeat(2, minmax(0px, 1fr));
+            column-gap: 3.2rem;
+
+            .item {
+                height: fit-content;
+
+                .title {
+                    position: relative;
+                    color: #FFF;
+                    background: $green_color;
+                    width: 100%;
+                    height: fit-content;
+                    padding: 1.6rem 3.2rem;
+                    border-radius: 15px 15px 0 0;
+                    border: 2px solid $green_color;
+                }
+
+                .content-wrapper {
+                    width: 100%;
+                    height: 26rem;
+                    padding: 3.2rem;
+                    display: flex;
+                    align-items: center;
+                    column-gap: 1.6rem;
+                    border-radius: 0 0 15px 15px;
+                    border: 2px solid $green_color;
+
+                    .content {
+                        line-height: 2.4rem;
+                    }
+
+                    img {
+                        width: 30%;
+                        height: fit-content;
+                    }
+                }
+            }
+        }
+    }
+
+    .flow {
+        .flow-steps {
+            display: block;
+            position: relative;
+            margin-bottom: 10.4rem;
+
+            .each-step {
+                display: block;
+                position: relative;
+
+                &:not(:last-child) {
+                    padding-bottom: 1.6rem;
+                }
+
+                &::before {
+                    position: absolute;
+                    content: "";
+                    width: 2px;
+                    height: calc(100% - 3.2rem);
+                    left: 3.2rem;
+                    top: 3.2rem;
+                    background-color: $green_color;
+                }
+
+                .step-wrapper {
+                    display: flex;
+                    align-items: center;
+                    column-gap: 3.2rem;
+                    position: relative;
+
+                    .step-number {
+                        aspect-ratio: 1 / 1;
+                        display: flex;
+                        position: relative;
+                        align-items: center;
+                        justify-content: center;
+                        flex-direction: column;
+                        width: 6.4rem;
+                        height: 6.4rem;
+                        background-color: $green_color;
+                        border-radius: 50px;
+                        flex-shrink: 0;
+                        margin-bottom: auto;
+                        .label {
+                            color: #FFF;
+                            font-family: "Montserrat";
+                            font-size: 1.2rem;
+                            font-style: normal;
+                            font-weight: 700;
+                            line-height: 1.2rem;
+                            letter-spacing: 1.2px;
+                            margin-top: 0.3rem;
+                            margin-bottom: 0.3rem;
+                        }
+                        .num {
+                            color: #FFF;
+                            font-family: "Montserrat";
+                            font-size: 2.8rem;
+                            font-style: normal;
+                            font-weight: 600;
+                            line-height: 2.4rem;
+                            letter-spacing: 3.8px;
+                        }
+                    }
+                    .step-content {
+                        margin-right: 6.2rem;
+                        width: 70%;
+                        .step-title {
+                            color: $green_color;
+                            font-family: "Noto Sans CJK JP";
+                            font-size: 2.4rem;
+                            font-style: normal;
+                            font-weight: 700;
+                            line-height: 6.0rem;
+                            letter-spacing: 2.4px;
+                        }
+                        .desc {
+                            color: #333;
+                            font-family: "Noto Sans CJK JP";
+                            font-size: 1.6rem;
+                            font-style: normal;
+                            font-weight: 500;
+                            line-height: 3.2rem;
+                            letter-spacing: 1.6px;
+                        }
                     }
                 }
             }
