--- a/src/scss/Layout/_header.scss
+++ b/src/scss/Layout/_header.scss
@@ -9,9 +9,11 @@
     transition: all 0.4s ease-in-out;
     z-index: 996;
     background: $red_color;
+
     @include media('sp') {
         padding: 4.0rem 2.0rem 0;
     }
+
     .header-wrapper {
         position: relative;
         display: flex;
@@ -22,43 +24,50 @@
         margin-left: auto;
         margin-right: auto;
     }
+
     .header-logo {
         position: relative;
         width: 20rem;
         // width: 155px;
         padding: 0;
+
         a {
             position: relative;
             display: flex;
             align-items: center;
             justify-content: center;
             width: 100%;
+
             img {
                 display: block;
                 width: 100%;
             }
         }
     }
+
     .header-nav {
-        display: none;
         position: relative;
         padding: 0;
+
         @include media('tb') {
             display: none;
         }
+
         .nav-menu {
+            display: block;
             position: relative;
             list-style: none;
             display: flex;
             align-items: center;
             justify-content: center;
             line-height: 1;
-            & > li {
+
+            &>.menu-item {
                 position: relative;
                 padding: 0;
-                &:not(:first-child) {
-                    margin-left: 3.0rem;
-                }
+                margin-left: 1.6rem;
+                margin-right: 1.6rem;
+
                 .menu-link {
                     position: relative;
                     display: flex;
@@ -67,31 +76,35 @@
                     width: fit-content;
                     font-family: $font_gothic;
                     font-weight: 500;
-                    font-size: 1.4rem;
+                    font-size: 1.6rem;
                     line-height: 2.8rem;
                     letter-spacing: 0.08em;
-                    color: #333;
+                    color: #FFF;
                     margin: 0;
                     white-space: nowrap;
                     text-decoration: none;
                     cursor: pointer;
-                    z-index: 0;
+                    z-index: 1;
+
                     img {
                         display: inline-block;
                         flex: 0 0 auto;
                         width: 1.1rem;
                         margin-left: 0.6rem;
                     }
+
                     svg {
                         display: inline-block;
                         width: initial;
                         height: auto;
                         margin-left: 0.6rem;
                     }
+
                     span {
                         color: inherit;
                         text-decoration: none;
                     }
+
                     &::before {
                         content: "";
                         position: absolute;
@@ -110,6 +123,55 @@
                     &.active {
                         &::before {
                             transform: scale(1, 1);
+                        }
+                    }
+                }
+            }
+
+            .menu-item {
+                &.has-submenu {
+                    position: relative;
+
+                    &:hover {
+                        i {
+                            transform: rotate(180deg);
+                        }
+
+                        .sub-menu {
+                            transform: scaleY(1);
+                            .sub-menu-item {
+                                a {
+                                    &::before {
+                                        background: transparent;
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    i {
+                        transition: transform 0.3s ease-in-out;
+                    }
+
+                    .sub-menu {
+                        display: flex;
+                        flex-direction: column;
+                        row-gap: 1.2rem;
+                        position: absolute;
+                        top: 2.4rem;
+                        left: -1.6rem;
+                        background: $red_color;
+                        padding: 2.6rem 1.6rem 1.6rem 1.6rem;
+                        border-radius: 5px;
+                        transform: scaleY(0);
+                        transform-origin: top center;
+                        transition: transform 0.3s ease-in-out;
+                        .sub-menu-item {
+                            a {
+                                &::before {
+                                    background: #FFF;
+                                }
+                            }
                         }
                     }
                 }
